--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 		<section class="main-content">
 			<h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed hacer eiusmod y vitalidad, tempor ut labore et dolore magna aliqua. A través de los años por venir, que nostrud ventaja aliquip de ella, pero para trabajar, hacer ejercicio, distrito escolar.</h3>
-			<iframe width="560" height="315" src="https://www.youtube.com/watch?v=DUT5rEU6pqM" frameborder="0" allowfullscreen></iframe>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/DUT5rEU6pqM" frameborder="0" allowfullscreen></iframe>
 		</section>
 
 <!--
