Homepage draft done, ready to start doing content

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Helios by HTML5 UP</title>
+		<title>OLAS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -56,7 +56,7 @@
 								<li>
 									<a href="events">Events</a>
 									<ul>
-										<li><a class="scrolly" href="events/#committees">Committees</a></li>
+										<li><a class="scrolly" href="events/">Featured</a></li>
 										<li><a class="scrolly" href="https://calendar.google.com">Calendar</a></li>
 									</ul>
 								</li>
@@ -65,6 +65,20 @@
 									<ul>
 										<li><a class="scrolly" href="cultural">Coming Soon</a></li>
 										<li><a class="scrolly" href="cultural/past">Past Events</a></li>
+									</ul>
+								</li>
+								<li>
+									<a href="involvement">Get Involved</a>
+									<ul>
+										<li><a class="scrolly" href="involvement/index.html#meetings">Meetings</a></li>
+										<li><a class="scrolly" href="involvement/index.html#committees">Committees</a></li>
+									</ul>
+								</li>
+								<li>
+									<a href="contact">Contact Us</a>
+									<ul>
+										<li><a class="scrolly" href="contact/index.html#social">Social Media</a></li>
+										<li><a class="scrolly" href="contact/index.html#sponsor">Sponsorship</a></li>
 									</ul>
 								</li>
 							</ul>
