removed home button

--- a/about/index.html
+++ b/about/index.html
@@ -22,6 +22,7 @@
 				<div class="inner">
 					<nav>
 						<ul>
+							<!-- <li><a href="../index.html">Home</a></li> -->
 							<li><a href="#mission">Mission</a></li>
 							<li><a href="#what">What We Do</a></li>
 							<li><a href="#board">Board</a></li>
@@ -60,6 +61,7 @@
 							<p><em>Community:</em> we strive to foster an immersive and supportive community for Latin Americans and invite our non-Latin American friends to join us in forming positive relations between each other and the greater Chicago community.</p>
 							<p><em>Culture:</em> we strive to promote an immersive culturally rich Latin American environment through hosting workshops, fostering productive discussions, and promoting community events.</p>
 							<p><em>Connections:</em> we strive to be a resource for our members by connecting them to the opportunities available on and off campus.</p>
+							<p>If you'd like to read our constitution, click <a class="link" href="constitution.pdf">here</a>.</p>
 						</div>
 					</section>
 
