--- a/about/index.html
+++ b/about/index.html
@@ -33,7 +33,7 @@
 
 			<div id="wrapper">
 
-					<section class="wrapper style1 fade-up">
+					<section class="wrapper style1">
 						<div class="inner">
 							<p>We are a student organization that recognizes that cohesiveness and true power comes from diversity. We endeavor to promote awareness, within and beyond the Latino/Latina community, that incorporates all facets of our culture rooted in Indigenous, African, and European ancestry. It is our mission to promote political, social, cultural and ethnic awareness that furthers the progression of the Latino/a community on both a collegiate and a community plane and to facilitate cultural exchange and knowledge.</p>
 							<!-- <ul class="actions"> -->
@@ -43,7 +43,7 @@
 						</div>
 					</section>
 
-					<section id="mission" class="wrapper style1 fade-up">
+					<section id="mission" class="wrapper style1">
 						<div class="inner">
 							<h2>Our Mission</h2>
 							<p>The Organization of Latin American Students’ (OLAS) purpose is composed of three main goals:</p>
@@ -55,7 +55,7 @@
 						</div>
 					</section>
 
-					<section id="what" class="wrapper style1 fade-up">
+					<section id="what" class="wrapper style1">
 						<div class="inner">
 							<h2>What We Do</h2>
 							<p><em>Community:</em> we strive to foster an immersive and supportive community for Latin Americans and invite our non-Latin American friends to join us in forming positive relations between each other and the greater Chicago community.</p>
@@ -65,7 +65,7 @@
 						</div>
 					</section>
 
-					<section id="board" class="wrapper style1 fade-up">
+					<section id="board" class="wrapper style1">
 						<div class="inner">
 							<h2>Board</h2>
 							<table><tr><td>Exequiel Manbor</td><td>emanbor@uchicago.edu</td><td>President</td><td>I am a fourth year at the University studying Economics with interests in language, culture and the social sciences in general. I was born and raised in Santiago, Chile and at UChicago have always looked for outlets to remind myself of my home. After a successful organization of our cultural show last year, I became president for OLAS. Latin American culture is becoming more dominant in the US and we strive to break stereotypes and share the diversity of our worlds, as well as serve as a space that reminds some people of home.</td></tr>
