--- a/cultural/index.html
+++ b/cultural/index.html
@@ -32,7 +32,7 @@
 
 			<div id="wrapper">
 
-					<section class="wrapper style1 fade-up">
+					<section class="wrapper style1">
 						<div class="inner">
 							<h2>Coming Soon!</h2>
 						</div>
