--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
 								<li>
 									<a href="contact">Contact Us</a>
 									<ul>
-										<li><a class="scrolly" href="contact/index.html#social">Social Media</a></li>
 										<li><a class="scrolly" href="contact/index.html#sponsor">Sponsorship</a></li>
+										<li><a class="scrolly" href="contact/index.html#partner">Partnership</a></li>
+										<li><a class="scrolly" href="contact/index.html#social">Social Media</a></li>
 									</ul>
 								</li>
 							</ul>
