--- a/involvement/index.html
+++ b/involvement/index.html
@@ -31,24 +31,15 @@
 
 		<div id="wrapper">
 
-			<section id="meetings" class="wrapper style1 fade-up">
+			<section id="meetings" class="wrapper style1">
 				<div class="inner">
 					<h2>Meetings</h2>
 					<p>Our first open meeting for 2016-17 is on Wednesday, October 5th, from 7:00-8:30pm. Location TBA.</p>
 					<p>For our full calendar, click <a class="link" href="https://calendar.google.com/calendar/embed?src=olasboard%40gmail.com&ctz=America/Chicago">here</a>.</p>
-					<br>
-					<br>
-					<br>
-					<br>
-					<br>
-					<br>
-					<br>
-					<br>
-					<br>
 				</div>
 			</section>
 
-			<section id="committees" class="wrapper style1 fade-up">
+			<section id="committees" class="wrapper style1">
 				<div class="inner">
 					<h2>Committees</h2>
 					<p>Coming soon!</p>
