Updating Contacts and Partnerships
Removed Old leadership, added current ones, have yet to add Google to sponsorship and other various partners

--- a/contact/index.html
+++ b/contact/index.html
@@ -37,11 +37,11 @@
 						<div class="inner">
 							<h2>Sponsorship</h2>
 							<p>We welcome organizations and individuals who are interested in becoming sponsors of our organization to contact us to arrange sponsorship packages or donations.</p>
-							<p>Academic year 2015-2016 sponsors:</p>
+							<p>Academic year 2017-2018 sponsors:</p>
 							<ul>
 								<li><p><img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Accenture.svg" width="100"> - a leading global professional services company, providing a broad range of services and solutions in strategy, consulting, digital, technology and operations.</p></li>
 							</ul>
-							<p>Interested in sponsoring us? Please contact our finance chair, Juan Anderson. His contact info can be found <a class="link scrolly active" href="../about/index.html#board">here</a>.</p>
+							<p>Interested in sponsoring us? Please contact our Finance chair, Konard Danzer. His contact info can be found <a class="link scrolly active" href="../about/index.html#board">here</a>.</p>
 						</div>
 					</section>
 
@@ -53,7 +53,7 @@
 							<ul>
 								<li><p><a class="link" href="https://muralmagazine.squarespace.com">Mural Magazine</a>: a Latin-American cultural magazine founded by OLAS members.</p></li>
 							</ul>
-							<p>Interested in partnering with us? Please contact our President and Community Outreach Chair, Exequiel Manbor. His contact info can be found <a class="link scrolly active" href="../about/index.html#board">here</a>.</p>
+							<p>Interested in partnering with us? Please contact our Presidents, Juan Anderson and Silvia Moreno. Their contact info can be found <a class="link scrolly active" href="../about/index.html#board">here</a>.</p>
 						</div>
 					</section>
 
