Updating Meeting and Committee info
Have yet to compile the list of committees and their contact info

--- a/involvement/index.html
+++ b/involvement/index.html
@@ -34,14 +34,14 @@
 			<section id="meetings" class="wrapper style1">
 				<div class="inner">
 					<h2>Meetings</h2>
-					<p>Our first open meeting for 2016-17 is on Wednesday, October 5th, from 7:00-8:30pm. Location TBA.</p>
-					<p>For our full calendar, click <a class="link" href="https://calendar.google.com/calendar/embed?src=olasboard%40gmail.com&ctz=America/Chicago">here</a>.</p>
+					<p>Our first open meeting for 2017-18 is on Wednesday, October 5th, from 7:00-8:30pm. Location is in Office Multicultural Students Affairs (OHMSA) at 5710 South Woodlawn Avenue.</p>
+					<p>For our full calendar with up-to-date events and meetings, click <a class="link" href="https://calendar.google.com/calendar/embed?src=olasboard%40gmail.com&ctz=America/Chicago">here</a>.</p>
 				</div>
 			</section>
 
 			<section id="committees" class="wrapper style1">
 				<div class="inner">
-					<h2>Committees</h2>
+					<h2>Get involved with our Committees!</h2>
 					<p>Coming soon!</p>
 				</div>
 			</section>
