--- a/events/index.html
+++ b/events/index.html
@@ -34,11 +34,20 @@
 
 					<section class="wrapper style1">
 						<div class="inner">
-							<h2>Coming Soon!</h2>
+							<h2>Our Events</h2>
+			<p>OLAS is committed to planning and executing a wide variety of events that cater to our community. In order to do this, we have two types of events: Series and Individual.</p>
+			<p>Series events are long-running events that center around the same theme (e.g. Habla Con OLAS focuses on spreading a basic understanding of the Spanish Language).</p>
+			<p> Individual Events are events whose topics and themes are highly manuable, often reflect important current events, and tend to be submitted by our membership rather than just the board.</p>
 						</div>
 					</section>
+				
+			<section id="Series Events" class="wrapper style1">
+					<div class="inner">
+						<h2>Upcoming Series Events</h2>
+						<p>Pardon our space, we are still pulling together our programming for the year!</p>
 
 			</div>
+				</section>
 
 		<!-- Scripts -->
 			<script src="../page-assets/js/jquery.min.js"></script>
