Updated Board Members
Finally added all members, still need to add photos and clean up the page prior.

--- a/about/index.html
+++ b/about/index.html
@@ -57,9 +57,9 @@
 					<section id="what" class="wrapper style1">
 						<div class="inner">
 							<h2>What We Do</h2>
-							<p><em>Community:</em> we strive to foster an immersive and supportive community for Latin Americans and invite our non-Latin American friends to join us in forming positive relations between each other and the greater Chicago community.</p>
-							<p><em>Culture:</em> we strive to promote an immersive culturally rich Latin American environment through hosting workshops, fostering productive discussions, and promoting community events.</p>
-							<p><em>Connections:</em> we strive to be a resource for our members by connecting them to the opportunities available on and off campus.</p>
+							<p><em>Community:</em> We strive to foster an immersive and supportive community for Latin Americans and invite our non-Latin American friends to join us in forming positive relations between each other and the greater Chicago community.</p>
+							<p><em>Culture:</em> We strive to promote an immersive culturally rich Latin American environment through hosting workshops, fostering productive discussions, and promoting community events.</p>
+							<p><em>Connections:</em> We strive to be a resource for our members by connecting them to the opportunities available on and off campus.</p>
 						</div>
 					</section>
 
@@ -74,6 +74,9 @@
 								<tr><td>Luisa Sepulveda</td><td>sepulvedal@uchicago.edu</td><td>Co Social Chair</td><td>I am a second year planning to major in Public Policy with a specialization in urban education. After dancing a Colombian fusion routine at the OLAS Cultural Show last spring, I met some incredible people who introduced me to this community on campus, and I’m so excited to be a part of it this year!</td></tr>
 								<tr><td>Ayling Dominguez</td><td>azd@uchicago.edu</td><td>Political Chair</td><td>Ayling Dominguez is a 3rd year Global Studies and Political Science double major, and our wonderfully active Political Chair. Of Mexican and Dominican descent, she is filled with taquitos, tostones, and love for OLAS. Look out for some engaging political events this year!</td></tr>
 								<tr><td>Kathia Rodriguez</td><td>rodriguezk@uchicago.edu</td><td>Co Cultural Chair</td><td>Kathia Rodriguez is a proud Mexican and 3rd year at UChicago. She majors in Global Studies and can be frequently found working hard to help OLAS share its members vivid, rich, and individual Latin American culures.</td></tr>
+								<tr><td>Gabino Sanchez Jr.</td><td>gabino@uchicago.edu</td><td>Co Social Chair</td><td>Gabino Sanchez is currently working on his bio</td></tr>
+								<tr><td>Lorenzo Guio</td><td>lortero@uchicago.edu</td><td>Dance Chair</td><td>Lorenzo Guio is currently working on his bio</td></tr>
+								<tr><td>Martina Lentino</td><td>mlentino@uchicago.edu</td><td>Co Cultural Chair</td><td>Martina Lentino is currently working on her bio</td></tr>
 								</table>
 						</div>
 					</section>
