--- a/cultural/index.html
+++ b/cultural/index.html
@@ -16,6 +16,67 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 
+				<!-- Header -->
+				<div id="header">
+
+					<!-- Inner -->
+						<div class="inner">
+							<header>
+								<!-- <hr /> -->
+								<!-- <h1><a href="index.html" id="logo">OLAS</a></h1> -->
+								<!-- <hr /> -->
+								<!-- <p>The Organization of Latin American Students</p> -->
+								<img src="images/header.png" alt="" height="500" width="500">
+							</header>
+						</div>
+
+					<!-- Nav -->
+						<nav id="nav">
+							<ul>
+								<li><a href="#">Home</a></li>
+								<li>
+									<a href="about">About</a>
+									<ul>
+										<li><a class="scrolly" href="about/index.html#mission">Mission</a></li>
+										<li><a class="scrolly" href="constitution">Constitution</a></li>
+										<li><a class="scrolly" href="about/index.html#what">What we do</a></li>
+										<li><a class="scrolly" href="about/index.html#board">Board</a></li>
+									</ul>
+								</li>
+								<li>
+									<a href="events">Events</a>
+									<ul>
+										<li><a class="scrolly" href="events/">Featured</a></li>
+										<li><a class="scrolly" href="https://calendar.google.com">Calendar</a></li>
+									</ul>
+								</li>
+								<li>
+									<a href="cultural">Cultural Show</a>
+									<ul>
+										<li><a class="scrolly" href="cultural">Coming Soon</a></li>
+										<li><a class="scrolly" href="cultural/past">Past Events</a></li>
+									</ul>
+								</li>
+								<li>
+									<a href="involvement">Get Involved</a>
+									<ul>
+										<li><a class="scrolly" href="involvement/index.html#meetings">Meetings</a></li>
+										<li><a class="scrolly" href="involvement/index.html#committees">Committees</a></li>
+									</ul>
+								</li>
+								<li>
+									<a href="contact">Contact Us</a>
+									<ul>
+										<li><a class="scrolly" href="contact/index.html#sponsor">Sponsorship</a></li>
+										<li><a class="scrolly" href="contact/index.html#partner">Partnership</a></li>
+										<li><a class="scrolly" href="contact/index.html#social">Social Media</a></li>
+									</ul>
+								</li>
+							</ul>
+						</nav>
+
+				</div>
+	
 	<body>
 		<!-- Sidebar -->
 			<section id="sidebar">
