Added social media buttons to home

--- a/index.html
+++ b/index.html
@@ -78,6 +78,17 @@
 
 				</div>
 
+			
+			<section id="social" class="wrapper style1">
+						<div class="inner">
+							<h2>Social Media</h2>
+							<a style="padding-right: 50px; border: 0" class="fa fa-5x fa-facebook" href="https://facebook.com/olas.uchicago"></a>
+							<a style="border: 0" class="fa fa-5x fa-instagram" href="https://instagram.com/olasuchicago"></a>
+						</div>
+					</section>
+			
+			
+			
 			<!-- <1!-- Banner --1> -->
 			<!-- 	<section id="banner"> -->
 			<!-- 		<header> -->
