Added title page

--- a/about/index.html
+++ b/about/index.html
@@ -34,6 +34,7 @@
 
 					<section class="wrapper style1">
 						<div class="inner">
+							<h2>What is OLAS?</h2>
 							<p>We are a student organization that recognizes that cohesiveness and true power comes from diversity. We endeavor to promote awareness, within and beyond the Latino/Latina community, that incorporates all facets of our culture rooted in Indigenous, African, and European ancestry. It is our mission to promote political, social, cultural and ethnic awareness that furthers the progression of the Latino/a community on both a collegiate and a community plane and to facilitate cultural exchange and knowledge.</p>
 							<!-- <ul class="actions"> -->
 							<!-- 	<li><a href="#mission" class="button scrolly active">Read our mission statement</a></li> -->
