change some colors, added an icon, uploaded a possible color scheme pic

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 -->
 <html>
 	<head>
-		<title>Right Sidebar - Helios by HTML5 UP</title>
+		<title>Organization of Latin American Students</title>
+        <link rel="shortcut icon" href="olas_icon.ico" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
