--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 									<header>
 										<h2><a href='#'><script src="assets/js/greeting.js"></script></a></h2>
 										<p>
-											Morbi convallis lectus malesuada sed fermentum dolore amet
+											This is OLAS, at uchicago
 										</p>
 									</header>
 									<a href="#" class="image featured"><img src="img/pic01.jpg" alt="" /></a>
