--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 							<div class="8u 12u(mobile)" id="content">
 								<article id="main">
 									<header>
-										<h2><a href="#">Right Sidebar</a></h2>
+										<h2><a href='#'><script src="assets/js/greeting.js"></script></a></h2>
 										<p>
-											Morbi convallis lectus malesuada sed fermentum dolore amet
+											This is OLAS, at uchicago
 										</p>
 									</header>
 									<a href="#" class="image featured"><img src="img/pic01.jpg" alt="" /></a>
