added some of the content

--- a/index.html
+++ b/index.html
@@ -32,7 +32,14 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html">Home</a></li>
-                                <li><a href="left-sidebar.html">About</a></li>
+                                <li>
+									<a href="#">About</a>
+									<ul>
+										<li><a href="#">Our Mission</a></li>
+										<li><a href="#">What We Do</a></li>
+										<li><a href="#">Our Board</a></li>
+									</ul>
+								</li>
                                 <li><a href="left-sidebar.html">Members</a></li>
                                 <li><a href="left-sidebar.html">Events</a></li>
 								<li>
@@ -50,8 +57,21 @@
 										</li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Gallery</a></li>
-								<li><a href="no-sidebar.html">Partnerships</a></li>
+                                <li>
+									<a href="#">Gallery</a>
+									<ul>
+										<li><a href="#">Videos</a></li>
+										<li><a href="#">Photographs</a></li>
+									</ul>
+								</li>
+								<li>
+									<a href="#">Partnerships</a>
+									<ul>
+										<li><a href="#">Accenture</a></li>
+										<li><a href="#">Google</a></li>
+                                        <li><a href="#">Mural Magazine</a></li>
+									</ul>
+								</li>
 							</ul>
 						</nav>
 
