--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+        <!--–– Last edit: 1/25/18 6:57PM ––-->
 		<title>Organization of Latin American Students</title>
         <link rel="shortcut icon" href="olas_icon.ico" />
 		<meta charset="utf-8" />
@@ -31,27 +32,46 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html">Home</a></li>
-								<li>
-									<a href="#">Dropdown</a>
+                                <li>
+									<a href="#">About</a>
 									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
-										<li>
-											<a href="#">And a submenu &hellip;</a>
-											<ul>
-												<li><a href="#">Lorem ipsum dolor</a></li>
-												<li><a href="#">Phasellus consequat</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam dolore nisl</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
+										<li><a href="#">Our Mission</a></li>
+										<li><a href="#">What We Do</a></li>
+										<li><a href="#">Our Board</a></li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+                                <li><a href="left-sidebar.html">Members</a></li>
+                                <li><a href="left-sidebar.html">Events</a></li>
+								<li>
+									<a href="#">Cultural Show</a>
+									<ul>
+										<li><a href="#">Committees</a></li>
+										<li><a href="#">Gallery</a></li>
+										<li><a href="#">Volunteer</a></li>
+										<li>
+											<a href="#">Previous Years &hellip;</a>
+											<ul>
+												<li><a href="#">2016</a></li>
+												<li><a href="#">2017</a></li>
+											</ul>
+										</li>
+									</ul>
+								</li>
+                                <li>
+									<a href="#">Gallery</a>
+									<ul>
+										<li><a href="#">Videos</a></li>
+										<li><a href="#">Photographs</a></li>
+									</ul>
+								</li>
+								<li>
+									<a href="#">Partnerships</a>
+									<ul>
+										<li><a href="#">Accenture</a></li>
+										<li><a href="#">Google</a></li>
+                                        <li><a href="#">Mural Magazine</a></li>
+									</ul>
+								</li>
 							</ul>
 						</nav>
 
@@ -67,7 +87,7 @@
 									<header>
 										<h2><a href='#'><script src="assets/js/greeting.js"></script></a></h2>
 										<p>
-											This is OLAS, at uchicago
+											Welcome to OLAS UChicago
 										</p>
 									</header>
 									<a href="#" class="image featured"><img src="img/pic01.jpg" alt="" /></a>
@@ -113,12 +133,10 @@
 								<hr class="first" />
 								<section>
 									<header>
-										<h3><a href="#">Accumsan sed penatibus</a></h3>
+										<h3><a href="#">About OLAS</a></h3>
 									</header>
 									<p>
-										Dolor sed fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-										porttitor phasellus tempus cubilia ultrices tempor sagittis  tellus ante diam nec penatibus dolor cras
-										magna tempus feugiat veroeros.
+										We are a student organization that recognizes that cohesiveness and true power comes from diversity. We endeavor to promote awareness, within and beyond the Latino/Latina community, that incorporates all facets of our culture rooted in...
 									</p>
 									<footer>
 										<a href="#" class="button">Learn More</a>
@@ -127,19 +145,19 @@
 								<hr />
 								<section>
 									<header>
-										<h3><a href="#">Sed lorem etiam consequat</a></h3>
+										<h3><a href="#">Upcoming Events</a></h3>
 									</header>
 									<p>
-										Tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+										Thank you to our members for supporting all our events!
 									</p>
 									<div class="row 50%">
 										<div class="4u">
 											<a href="#" class="image fit"><img src="img/pic10.jpg" alt="" /></a>
 										</div>
 										<div class="8u">
-											<h4>Nibh sed cubilia</h4>
+											<h4>OLAS Study Break</h4>
 											<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
+												Need to replace this text with something related to the event!
 											</p>
 										</div>
 									</div>
@@ -148,9 +166,9 @@
 											<a href="#" class="image fit"><img src="img/pic11.jpg" alt="" /></a>
 										</div>
 										<div class="8u">
-											<h4>Proin sed adipiscing</h4>
+											<h4>Community Service</h4>
 											<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
+												Need to replace this text with something related to the event!
 											</p>
 										</div>
 									</div>
@@ -159,9 +177,9 @@
 											<a href="#" class="image fit"><img src="img/pic12.jpg" alt="" /></a>
 										</div>
 										<div class="8u">
-											<h4>Lorem feugiat magna</h4>
+											<h4>Meeting</h4>
 											<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
+												Need to replace this text with something related to the event!
 											</p>
 										</div>
 									</div>
@@ -170,9 +188,9 @@
 											<a href="#" class="image fit"><img src="img/pic13.jpg" alt="" /></a>
 										</div>
 										<div class="8u">
-											<h4>Sed tempus fringilla</h4>
+											<h4>Photoshoot</h4>
 											<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
+												Need to replace this text with something related to the event!
 											</p>
 										</div>
 									</div>
@@ -181,9 +199,9 @@
 											<a href="#" class="image fit"><img src="img/pic14.jpg" alt="" /></a>
 										</div>
 										<div class="8u">
-											<h4>Malesuada fermentum</h4>
+											<h4>Other event</h4>
 											<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
+												Need to replace this text with something related to the event!
 											</p>
 										</div>
 									</div>
@@ -238,6 +256,7 @@
 							<!-- Tweets -->
 								<section class="4u 12u(mobile)">
 									<header>
+                                        <p>Tweets</p>
 										<h2 class="icon fa-twitter circled"><span class="label">Tweets</span></h2>
 									</header>
 									<ul class="divided">
@@ -271,6 +290,7 @@
 							<!-- Posts -->
 								<section class="4u 12u(mobile)">
 									<header>
+                                        <p>Posts</p>
 										<h2 class="icon fa-file circled"><span class="label">Posts</span></h2>
 									</header>
 									<ul class="divided">
@@ -312,6 +332,7 @@
 							<!-- Photos -->
 								<section class="4u 12u(mobile)">
 									<header>
+                                        <p>Photos</p>
 										<h2 class="icon fa-camera circled"><span class="label">Photos</span></h2>
 									</header>
 									<div class="row 25% no-collapse">
@@ -348,9 +369,9 @@
 								<!-- Contact -->
 									<section class="contact">
 										<header>
-											<h3>Nisl turpis nascetur interdum?</h3>
+											<h3>Want to follow us on social media?</h3>
 										</header>
-										<p>Urna nisl non quis interdum mus ornare ridiculus egestas ridiculus lobortis vivamus tempor aliquet.</p>
+										<p>Here are all our pages:</p>
 										<ul class="icons">
 											<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 											<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
@@ -364,7 +385,7 @@
 								<!-- Copyright -->
 									<div class="copyright">
 										<ul class="menu">
-											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+											<li>&copy; OLAS. All rights reserved.</li><li>Thank you!</a></li>
 										</ul>
 									</div>
 
