--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
                                 <li>
-									<a href="#">About</a>
+									<a href="about/index.html">About</a>
 									<ul>
-										<li><a href="#">Our Mission</a></li>
-										<li><a href="#">What We Do</a></li>
-										<li><a href="#">Our Board</a></li>
+										<li><a href="about/index.html#mission">Our Mission</a></li>
+										<li><a href="about/index.html#what">What We Do</a></li>
+										<li><a href="about/index.html#board">Our Board</a></li>
 									</ul>
 								</li>
-                                <li><a href="left-sidebar.html">Members</a></li>
-                                <li><a href="left-sidebar.html">Events</a></li>
+                                <li><a href="membership/index.html">Members</a></li>
+                                <li><a href="events/index.html">Events</a></li>
 								<li>
-									<a href="#">Cultural Show</a>
+									<a href="cultural_show/index.html">Cultural Show</a>
 									<ul>
-										<li><a href="#">Committees</a></li>
+										<li><a href="cultural_show/index.html#committees">Committees</a></li>
 										<li><a href="#">Gallery</a></li>
 										<li><a href="#">Volunteer</a></li>
 										<li>
@@ -58,18 +58,18 @@
 									</ul>
 								</li>
                                 <li>
-									<a href="#">Gallery</a>
+									<a href="gallery/index.html">Gallery</a>
 									<ul>
-										<li><a href="#">Videos</a></li>
-										<li><a href="#">Photographs</a></li>
+										<li><a href="gallery/index.html#videos">Videos</a></li>
+										<li><a href="gallery/index.html#photos#">Photographs</a></li>
 									</ul>
 								</li>
 								<li>
-									<a href="#">Partnerships</a>
+									<a href="partnerships/index.html">Partnerships</a>
 									<ul>
-										<li><a href="#">Accenture</a></li>
-										<li><a href="#">Google</a></li>
-                                        <li><a href="#">Mural Magazine</a></li>
+										<li><a href="partnerships/index.html#accenture">Accenture</a></li>
+										<li><a href="partnerships/index.html#google">Google</a></li>
+                                        <li><a href="partnerships/index.html#mural">Mural Magazine</a></li>
 									</ul>
 								</li>
 							</ul>
@@ -129,6 +129,7 @@
 									</section>
 								</article>
 							</div>
+                    <!--Sidebar-->
 							<div class="4u 12u(mobile)" id="sidebar">
 								<hr class="first" />
 								<section>
