--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 							<article class="4u 12u(mobile) special">
 								<a href="#" class="image featured"><img src="img/pic07.jpg" alt="" /></a>
 								<header>
-									<h3><a href="#">Gravida aliquam penatibus</a></h3>
+									<h3><a href="#">Article #1</a></h3>
 								</header>
 								<p>
 									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
@@ -227,7 +227,7 @@
 							<article class="4u 12u(mobile) special">
 								<a href="#" class="image featured"><img src="img/pic08.jpg" alt="" /></a>
 								<header>
-									<h3><a href="#">Sed quis rhoncus placerat</a></h3>
+									<h3><a href="#">Article #2</a></h3>
 								</header>
 								<p>
 									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
@@ -237,7 +237,7 @@
 							<article class="4u 12u(mobile) special">
 								<a href="#" class="image featured"><img src="img/pic09.jpg" alt="" /></a>
 								<header>
-									<h3><a href="#">Magna laoreet et aliquam</a></h3>
+									<h3><a href="#">Article #3</a></h3>
 								</header>
 								<p>
 									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
@@ -263,11 +263,12 @@
 									<ul class="divided">
 										<li>
 											<article class="tweet">
-												Amet nullam fringilla nibh nulla convallis tique ante sociis accumsan.
-												<span class="timestamp">5 minutes ago</span>
+												Coming Soon!
+                                                <span class="timestamp"><p>3 hours ago</p></span>
 											</article>
 										</li>
-										<li>
+                                        <!-- tweet samples -->
+										<!-- <li>
 											<article class="tweet">
 												Hendrerit rutrum quisque.
 												<span class="timestamp">30 minutes ago</span>
@@ -284,7 +285,7 @@
 												Lacus natoque cras rhoncus curae dignissim ultricies. Convallis orci aliquet.
 												<span class="timestamp">5 hours ago</span>
 											</article>
-										</li>
+										</li> -->
 									</ul>
 								</section>
 
@@ -298,12 +299,13 @@
 										<li>
 											<article class="post stub">
 												<header>
-													<h3><a href="#">Nisl fermentum integer</a></h3>
+													<h3><a href="https://www.facebook.com/olas.uchicago/">Coming Soon!</a></h3>
 												</header>
 												<span class="timestamp">3 hours ago</span>
 											</article>
 										</li>
-										<li>
+                                        <!-- posts samples -->
+										<!-- <li>
 											<article class="post stub">
 												<header>
 													<h3><a href="#">Phasellus portitor lorem</a></h3>
@@ -322,42 +324,34 @@
 										<li>
 											<article class="post stub">
 												<header>
-													<h3><a href="#">Feugiat lorem ipsum</a></h3>
+													<h3><a href="#">Hello</a></h3>
 												</header>
 												<span class="timestamp">2 days ago</span>
 											</article>
-										</li>
+										</li> -->
 									</ul>
 								</section>
 
 							<!-- Photos -->
 								<section class="4u 12u(mobile)">
 									<header>
-                                        <p>Photos</p>
+                                        <p>Recent Photos</p>
 										<h2 class="icon fa-camera circled"><span class="label">Photos</span></h2>
 									</header>
 									<div class="row 25% no-collapse">
 										<div class="6u">
-											<a href="#" class="image fit"><img src="img/pic10.jpg" alt="" /></a>
+											<a href="gallery/img/" class="image fit"><img src="gallery/img/pic01.jpg" alt="" /></a>
 										</div>
 										<div class="6u">
-											<a href="#" class="image fit"><img src="img/pic11.jpg" alt="" /></a>
-										</div>
-									</div>
-									<div class="row 25% no-collapse">
-										<div class="6u">
-											<a href="#" class="image fit"><img src="img/pic12.jpg" alt="" /></a>
-										</div>
-										<div class="6u">
-											<a href="#" class="image fit"><img src="img/pic13.jpg" alt="" /></a>
+											<a href="gallery/img/" class="image fit"><img src="gallery/img/pic02.jpg" alt="" /></a>
 										</div>
 									</div>
 									<div class="row 25% no-collapse">
 										<div class="6u">
-											<a href="#" class="image fit"><img src="img/pic14.jpg" alt="" /></a>
+											<a href="gallery/img/" class="image fit"><img src="gallery/img/pic03.jpg" alt="" /></a>
 										</div>
 										<div class="6u">
-											<a href="#" class="image fit"><img src="img/pic15.jpg" alt="" /></a>
+											<a href="gallery/img/" class="image fit"><img src="gallery/img/pic04.jpg" alt="" /></a>
 										</div>
 									</div>
 								</section>
@@ -372,14 +366,15 @@
 										<header>
 											<h3>Want to follow us on social media?</h3>
 										</header>
-										<p>Here are all our pages:</p>
+										<p>Here are our pages:</p>
 										<ul class="icons">
-											<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-											<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-											<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-											<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
+											<li><a href="https://twitter.com/olasuchicago?lang=en" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+											<li><a href="https://www.facebook.com/olas.uchicago/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+											<li><a href="https://www.instagram.com/olasuchicago/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+											 <!-- extra social platforms -->
+                                            <!-- <li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
 											<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-											<li><a href="#" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+											<li><a href="#" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li> -->
 										</ul>
 									</section>
 
