--- a/index.html
+++ b/index.html
@@ -43,19 +43,29 @@
 									</ul>
 								</li>
                                 <li>
-                                    <a href="membership/index.html">Members</a></li>
+                                    <a href="membership/index.html">Members</a>
+                                    <ul>
+										<li><a href="membership/index.html#get">Get involved</a></li>
+										<li><a href="membership/index.html#member"></a>How to become a member</li>
+									</ul>
+                                </li>
                                 <li>
-                                    <a href="events/index.html">Events</a></li>
+                                    <a href="events/index.html">Events</a>
+                                    <ul>
+										<li><a href="events/index.html#upcoming">Upcoming events</a></li>
+										<li><a href="events/index.html#suggestions"></a>Suggest an event</li>
+									</ul>
+                                </li>
 								<li>
 									<a href="cultural_show/index.html">Cultural Show</a>
 									<ul>
 										<li><a href="cultural_show/index.html#committees">Committees</a></li>
-										<li><a href="#">Gallery</a></li>
-										<li><a href="#">Volunteer</a></li>
+										<li><a href="cultural_show/index.html#committees#gallery">Gallery</a></li>
+										<li><a href="cultural_show/index.html#committees#volunteer">Volunteer</a></li>
 										<li>
-											<a href="#">Previous Years &hellip;</a>
+											<a href="cultural_show/previous/index.html">Previous Years &hellip;</a>
 											<ul>
-												<li><a href="#">2017</a></li>
+												<li><a href="cultural_show/previous/index.html#2017">2017</a></li>
 											</ul>
 										</li>
 									</ul>
@@ -195,7 +205,7 @@
 										</div>
 									</div>
 									<footer>
-										<a href="#" class="button">Magna Adipiscing</a>
+										<a href="#" class="button">Events page</a>
 									</footer>
 								</section>
 							</div>
