--- a/about/index.html
+++ b/about/index.html
@@ -211,10 +211,10 @@
                                                 <p>gabino@uchicago.edu</p>
                                             </li>
                                             <li id="lorenzo" class="board">
-                                                <img src="img/juan.png" width="200px" />
+                                                <img src="img/lorenzo.jpg" width="200px" />
                                                 <h4>Lorenzo Guio</h4>
                                                 <p><em>Community Service Chair</em></p>
-                                                <p>Lorenzo Guio is currently working on his bio.</p>
+                                                <p>Lorenzo is a fourth year in the college studying molecular engineering. He’s originally from Bogota, Colombia but lives in Miami. When not doing service, you can find him dancing merengue or racing his bike.</p>
                                                 <p>lortero@uchicago.edu</p>
                                             </li>
                                         </ul>
