--- a/about/index.html
+++ b/about/index.html
@@ -154,7 +154,7 @@
                                                 <p>nrios23@uchicago.edu</p>
                                             </li>
                                             <li id="chema" class="board">
-                                                <img src="img/juan.png" width="200px" />
+                                                <img src="img/chema.jpg" width="200px" />
                                                 <h4>Jose Reyes</h4>
                                                 <p><em>Communications Co-Chair</em></p>
                                                 <p>Jose Reyes is a second year studying Computer Science with a minor in Computational Neuroscience and one of the best programmers OLAS has ever had!</p>
