--- a/events/index.html
+++ b/events/index.html
@@ -36,11 +36,11 @@
                                     <a href="../index.html">Home</a>
                                 </li>
                                 <li>
-									<a href="index.html">About</a>
+									<a href="../about/index.html">About</a>
 									<ul>
-										<li><a href="#mission">Our Mission</a></li>
-										<li><a href="#what">What We Do</a></li>
-										<li><a href="#board">Our Board</a></li>
+										<li><a href="../about/index.html#mission">Our Mission</a></li>
+										<li><a href="../about/index.html#what">What We Do</a></li>
+										<li><a href="../about/index.html#board">Our Board</a></li>
 									</ul>
 								</li>
                                 <li>
