--- a/index.html
+++ b/index.html
@@ -98,12 +98,17 @@
 							<div class="8u 12u(mobile)" id="content">
 								<article id="main">
 									<header>
-										<h2><a href='#'><script src="assets/js/greeting.js"></script></a></h2>
+                                        <!-- dynamic greeting -->
+										<h2><a id="greeting" href='#'></a></h2>
 										<p>
 											Welcome to OLAS UChicago
 										</p>
+                                        <a href="#" class="image featured"><img src="img/pic01.jpg" alt="" /></a>
+                                        <!-- testing a countdown -->
+                                        <h3>Premios OLAS Coundown:</h3>
+                                        <!-- Display the countdown timer in an element -->
+                                        <p id="countdown"></p>
 									</header>
-									<a href="#" class="image featured"><img src="img/pic01.jpg" alt="" /></a>
 									<p>
 										Join OLAS!
 									</p>
@@ -389,6 +394,7 @@
 		</div>
 
 		<!-- Scripts -->
+            <script src="assets/js/greeting.js"></script>
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.dropotron.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
