Added our story

--- a/about/index.html
+++ b/about/index.html
@@ -74,8 +74,8 @@
                                 <li>
 									<a href="../gallery/index.html">Gallery</a>
 									<ul>
-										<li><a href="../gallery/index.html#videos">Videos</a></li>
-										<li><a href="../gallery/index.html#photos#">Photographs</a></li>
+										<li><a href="gallery/index.html#photos">Photographs</a></li>
+                                        <li><a href="gallery/index.html#videos">Videos</a></li>
 									</ul>
 								</li>
 								<li>
