--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
+        <link rel="stylesheet" href="assets/css/extra_details.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 	<body class="right-sidebar">
@@ -73,8 +74,8 @@
                                 <li>
 									<a href="gallery/index.html">Gallery</a>
 									<ul>
-										<li><a href="gallery/index.html#videos">Videos</a></li>
-										<li><a href="gallery/index.html#photos#">Photographs</a></li>
+										<li><a href="gallery/index.html#photos">Photographs</a></li>
+                                        <li><a href="gallery/index.html#videos">Videos</a></li>
 									</ul>
 								</li>
 								<li>
@@ -105,21 +106,22 @@
 										</p>
                                         <a href="#" class="image featured"><img src="img/pic01.jpg" alt="" /></a>
                                         <!-- testing a countdown -->
-                                        <h3>Premios OLAS Coundown:</h3>
+                                        <h3>Premios OLAS Countdown:</h3>
                                         <!-- Display the countdown timer in an element -->
                                         <p id="countdown"></p>
 									</header>
-									<p>
-										Join OLAS!
-									</p>
-									<section>
+									<section id="story">
 										<header>
-											<h3>OLAS Events</h3>
+											<h3>Our Story</h3>
 										</header>
 										<p>
-											We'll be updating events soon!
-										<p>
-											<!-- This will be updated -->
+                                            The Organization of Latin American Students at the University of Chicago is the official Latin-American student organization that recognizes that cohesiveness and true power comes from diversity. 
+                                        </p>
+                                        <p>We endeavor to promote awareness, within and beyond the Latin American community, that incorporates all facets of our culture rooted in Indigenous, African, and European ancestry.
+                                        </p>
+                                        <p>It is our mission to promote political, social, cultural and ethnic awareness that furthers the progression of the community on both collegiate and community planes.
+                                        </p>
+                                        <p>We aim to accomplish this through the union of all Latinos and students interested in Latino culture. We firmly believe that through our collaborative efforts we can ensure the appreciation, promotion, and furthering of our diverse Hispanic heritages. 
 										</p>
 									</section>
 									<section>
