--- a/gallery/index.html
+++ b/gallery/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
         <!--–– Last edit: 1/25/18 6:57PM ––-->
-		<title>OLAS - About</title>
+		<title>OLAS - Videos</title>
         <link rel="shortcut icon" href="olas_icon.ico" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -74,8 +74,8 @@
                                 <li>
 									<a href="index.html">Gallery</a>
 									<ul>
-										<li><a href="index.html#videos">Videos</a></li>
 										<li><a href="index.html#photos">Photographs</a></li>
+                                        <li><a href="index.html#videos">Videos</a></li>
 									</ul>
 								</li>
 								<li>
@@ -103,28 +103,40 @@
 									</header>
                                         <ul>
                                             <li id="salsa" class="show">
-                                                <iframe width="480" height="270" src="https://www.youtube.com/embed/e7Z__wGLin0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                                                <h3>Salsa</h3>
+                                                <div class="vids">
+                                                    <iframe width="480" height="270" src="https://www.youtube.com/embed/e7Z__wGLin0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                                                    <h3>Salsa</h3>
+                                                </div>
                                             </li>
                                             <li id="martina_canto" class="show">
-                                                <iframe width="480" height="270" src="https://www.youtube.com/embed/lOe0cNpK5-w" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                                                <h3>Martina</h3>
+                                                <div class="vids">
+                                                    <iframe width="480" height="270" src="https://www.youtube.com/embed/lOe0cNpK5-w" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                                                    <h3>Martina</h3>
+                                                </div>
                                             </li>
                                             <li id="folklorico" class="show">
-                                                <iframe width="480" height="270" src="https://www.youtube.com/embed/aV3LxxOqNZg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                                                <h3>Folklorico</h3>
+                                                <div class="vids">
+                                                    <iframe width="480" height="270" src="https://www.youtube.com/embed/aV3LxxOqNZg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                                                    <h3>Folklorico</h3>
+                                                </div>
                                             </li>
-                                            <li id="mariachi" class="show">                  
-                                                <iframe width="480" height="270" src="https://www.youtube.com/embed/S1FZplSPKps" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                                                <h3>Mariachi</h3>
+                                            <li id="mariachi" class="show">  
+                                                <div class="vids">
+                                                    <iframe width="480" height="270" src="https://www.youtube.com/embed/S1FZplSPKps" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                                                    <h3>Mariachi</h3>
+                                                </div>
                                             </li>
-                                            <li id="cumbia" class="show">   
-                                                <iframe width="480" height="270" src="https://www.youtube.com/embed/sGmhEnnBrec" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                                                <h3>Cumbia</h3>
+                                            <li id="cumbia" class="show"> 
+                                                <div class="vids">
+                                                    <iframe width="480" height="270" src="https://www.youtube.com/embed/sGmhEnnBrec" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                                                    <h3>Cumbia</h3>
+                                                </div>
                                             </li>
                                             <li id="coral" class="show">   
-                                                <iframe width="480" height="270" src="https://www.youtube.com/embed/Rl3Lir09Fko" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                                                <h3>Coral</h3>
+                                                <div class="vids">
+                                                    <iframe width="480" height="270" src="https://www.youtube.com/embed/Rl3Lir09Fko" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                                                    <h3>Coral</h3>
+                                                </div>
                                             </li>
                                         </ul>
 									</section>
