--- a/gallery/index.html
+++ b/gallery/index.html
@@ -61,8 +61,8 @@
 									<a href="../cultural_show/index.html">Cultural Show</a>
 									<ul>
 										<li><a href="../cultural_show/index.html#committees">Committees</a></li>
-										<li><a href="../cultural_show/index.html#committees#gallery">Gallery</a></li>
-										<li><a href="../cultural_show/index.html#committees#volunteer">Volunteer</a></li>
+										<li><a href="../cultural_show/index.html#volunteer">Volunteer</a></li>
+                                        <li><a href="../cultural_show/index.html#gallery">Gallery</a></li>
 										<li>
 											<a href="../cultural_show/previous/index.html">Previous Years &hellip;</a>
 											<ul>
@@ -99,7 +99,7 @@
 							<div class="8u 12u(mobile)" id="content">
 								<article id="main">
 									<header>
-										<h2>Cultural Show Videos</h2>
+										<h2 id="videos">Cultural Show Videos</h2>
 									</header>
                                         <ul>
                                             <li id="salsa" class="show">
