--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 									<a href="cultural_show/index.html">Cultural Show</a>
 									<ul>
 										<li><a href="cultural_show/index.html#committees">Committees</a></li>
-										<li><a href="cultural_show/index.html#committees#gallery">Gallery</a></li>
-										<li><a href="cultural_show/index.html#committees#volunteer">Volunteer</a></li>
+                                        <li><a href="cultural_show/index.html#volunteer">Volunteer</a></li>
+										<li><a href="cultural_show/index.html#gallery">Gallery</a></li>
 										<li>
 											<a href="cultural_show/previous/index.html">Previous Years &hellip;</a>
 											<ul>
@@ -106,13 +106,13 @@
 										</p>
                                         <a href="#" class="image featured"><img src="img/pic01.jpg" alt="" /></a>
                                         <!-- testing a countdown -->
-                                        <h3>Premios OLAS Countdown:</h3>
+                                        <h3><a href="cultural_show/index.html">Premios OLAS Countdown:</a></h3>
                                         <!-- Display the countdown timer in an element -->
                                         <p id="countdown"></p>
 									</header>
 									<section id="story">
 										<header>
-											<h3>Our Story</h3>
+                                            <h3><a href="about/index.html">Our Story</a></h3>
 										</header>
 										<p>
                                             The Organization of Latin American Students at the University of Chicago is the official Latin-American student organization that recognizes that cohesiveness and true power comes from diversity. 
@@ -126,10 +126,10 @@
 									</section>
 									<section>
 										<header>
-											<h3>OLAS Membership:</h3>
+                                            <h3><a href="membership/index.html">OLAS Membership:</a></h3>
 										</header>
 										<p>
-											We'll be updating this soon!
+											Visit our member's page to learn more about how to become a member!
 										</p>
 									</section>
 								</article>
