--- a/about/index.html
+++ b/about/index.html
@@ -36,11 +36,11 @@
                                     <a href="../index.html">Home</a>
                                 </li>
                                 <li>
-									<a href="index.html">About</a>
+									<a href="../about/index.html">About</a>
 									<ul>
-										<li><a href="#mission">Our Mission</a></li>
-										<li><a href="#what">What We Do</a></li>
-										<li><a href="#board">Our Board</a></li>
+										<li><a href="../about/index.html#mission">Our Mission</a></li>
+										<li><a href="../about/index.html#what">What We Do</a></li>
+										<li><a href="../about/index.html#board">Our Board</a></li>
 									</ul>
 								</li>
                                 <li>
@@ -61,8 +61,8 @@
 									<a href="../cultural_show/index.html">Cultural Show</a>
 									<ul>
 										<li><a href="../cultural_show/index.html#committees">Committees</a></li>
-										<li><a href="../cultural_show/index.html#committees#gallery">Gallery</a></li>
-										<li><a href="../cultural_show/index.html#committees#volunteer">Volunteer</a></li>
+										<li><a href="../cultural_show/index.html#volunteer">Volunteer</a></li>
+                                        <li><a href="../cultural_show/index.html#gallery">Gallery</a></li>
 										<li>
 											<a href="../cultural_show/previous/index.html">Previous Years &hellip;</a>
 											<ul>
@@ -74,8 +74,8 @@
                                 <li>
 									<a href="../gallery/index.html">Gallery</a>
 									<ul>
-										<li><a href="gallery/index.html#photos">Photographs</a></li>
-                                        <li><a href="gallery/index.html#videos">Videos</a></li>
+										<li><a href="../gallery/index.html#photos">Photographs</a></li>
+                                        <li><a href="../gallery/index.html#videos">Videos</a></li>
 									</ul>
 								</li>
 								<li>
