--- a/partnerships/index.html
+++ b/partnerships/index.html
@@ -61,8 +61,8 @@
 									<a href="../cultural_show/index.html">Cultural Show</a>
 									<ul>
 										<li><a href="../cultural_show/index.html#committees">Committees</a></li>
-										<li><a href="../cultural_show/index.html#committees#gallery">Gallery</a></li>
-										<li><a href="../cultural_show/index.html#committees#volunteer">Volunteer</a></li>
+										<li><a href="../cultural_show/index.html#volunteer">Volunteer</a></li>
+                                        <li><a href="../cultural_show/index.html#gallery">Gallery</a></li>
 										<li>
 											<a href="../cultural_show/previous/index.html">Previous Years &hellip;</a>
 											<ul>
@@ -74,8 +74,8 @@
                                 <li>
 									<a href="../gallery/index.html">Gallery</a>
 									<ul>
-										<li><a href="../gallery/index.html#videos">Videos</a></li>
-										<li><a href="../gallery/index.html#photos#">Photographs</a></li>
+										<li><a href="../gallery/index.html#photos">Photographs</a></li>
+                                        <li><a href="../gallery/index.html#videos">Videos</a></li>
 									</ul>
 								</li>
 								<li>
